# turtlebot_bt_simulation

./: CMakeLists.txt  README.md  package.xml
launch/: spawn_turtlebot.launch.py  start_simulation.launch.py
model/building_plan/: model.config
model/turtlebot3_burger/: model.sdf
turtlebot_gazebo/: CMakeLists.txt  package.xml
turtlebot_gazebo/docs/: index.html
turtlebot_gazebo/launch/: spawn_turtlebot.launch.py  start_simulation.launch.py
turtlebot_gazebo/model/building_plan/: model.config  model.sdf
turtlebot_gazebo/model/turtlebot3_burger/: model.sdf
turtlebot_gazebo/rviz/: view_robot.rviz
turtlebot_gazebo/world/: playground.world  small_room.world
turtlebot_nav2/: CMakeLists.txt  package.xml
turtlebot_nav2/config/: localization.yaml  mapping.yaml  navigation.yaml
turtlebot_nav2/launch/: start_localization.launch.py  start_mapping.launch.py  start_navigation.launch.py
turtlebot_nav2/map/: map_first_room.pgm  map_first_room.yaml  map_small_room.pgm  map_small_room.yaml
turtlebot_nav2/rviz/: view_robot.rviz
world/: playground.world
